--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,8 @@ archives_base_name=mechanicaltech
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.30.0+1.16
+
+engilib_version=1.0.0+1.16
+dynamoapi_version=1.0.0+1.16
+libgui_version=3.3.3+1.16.5
+rei_version=5.8.10
